syntax = "proto3";
service Cat {
  rpc GetMyCat (GetMyCatMessage) returns (MyCatResponse) {}
  rpc GetMyCats (GetMyCatsMessage) returns (MyCatsResponse) {}
}

message GetMyCatMessage {
  string target_cat = 1;
}

message MyCatResponse {
  string name = 1;
  string kind = 2;
}

message GetMyCatsMessage {
  repeated string target_cats = 1;
}

message MyCatsResponse {
  repeated MyCatResponse my_cat = 1;
}
